// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppHeader should display the sidebar on desktop 1`] = `
<nav
  class=""
  id="app-header"
>
  <div
    id="develop-mode-warning"
  >
    DEVELOPMENT MODE
  </div>
   
  <div
    class="container"
  >
    <div
      class="header-item header-item-logo"
    >
      <img
        id="logo-white"
        src="~assets/images/cosmos-wordmark-white.svg"
      />
    </div>
     
    <app-menu-stub />
     
    <!---->
  </div>
</nav>
`;

exports[`AppHeader should show the sidebar as a menu on mobile 1`] = `
<nav
  class="mobile"
  id="app-header"
>
  <div
    id="develop-mode-warning"
  >
    DEVELOPMENT MODE
  </div>
   
  <div
    class="container"
  >
    <div
      class="header-item header-item-logo"
    >
      <img
        id="logo-white"
        src="~assets/images/cosmos-wordmark-white.svg"
      />
    </div>
     
    <app-menu-stub />
     
    <div
      class="header-item close-menu"
    >
      <i
        class="material-icons"
      >
        close
      </i>
    </div>
     
    <!---->
  </div>
</nav>
`;
